--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-infinite-scroller": "^1.0.15",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2"
   }
